<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context="com.nordicid.accessorydemo.MainActivity">

    <!-- Device search / connect to known or disconnect. -->
    <Button
        android:id="@+id/btn_device_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_search_devices"
        android:onClick="onDeviceSearchButtonClick"/>

    <!-- Reader / accessory information. -->
    <Button
        android:id="@+id/btn_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_reader_information"
        android:onClick="onDeviceInformationButtonClick"/>

    <!-- Accessory actions. -->
    <Button
        android:id="@+id/btn_accessory_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_accessory_actions"
        android:onClick="onAccessoryActionsClick"/>

    <!-- Reader / accessory settings. -->
    <Button
        android:id="@+id/btn_accessory_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_reader_settings"
        android:onClick="onAccessorySettingsButtonClick"/>

    <!-- BLE restart. -->
    <Button
        android:id="@+id/btn_ble_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_reader_restart"
        android:onClick="onAccessoryRestartButtonClick"/>

    <!-- Application settings. -->
    <Button
        android:id="@+id/btn_app_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/text_app_settings"
        android:onClick="onAppSettingsButtonClick"/>

    <!-- Separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <!-- Connected/disconnected. -->
    <TextView
        android:id="@+id/main_connection_ind"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:text="@string/text_disconnected">
    </TextView>

    <!-- Separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <TextView
        android:id="@+id/api_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/nordic_id_orange"/>
</LinearLayout>
