<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inventory_tab">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/text_inventory_count">
    </TextView>

    <TextView
        android:id="@+id/tag_count_view"
        android:layout_width="match_parent"
        android:layout_weight="16"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:textSize="48sp"
        android:gravity="center"
        android:text="0">
    </TextView>

    <ListView
        android:id="@+id/tag_epc_rssi_view"
        android:layout_width="match_parent"
        android:layout_weight="63"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:textSize="16sp">
    </ListView>

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="12"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_start_inventory"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:text="@string/text_start_tag_count"
            android:onClick="handleCountTabButton">
        </Button>
        <Button
            android:id="@+id/btn_epc_filter"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:text="@string/text_epc_filter"
            android:onClick="handleCountTabButton">
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="12"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_count_session"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:text="@string/text_count_session"
            android:onClick="handleCountTabButton">
        </Button>
        <Button
            android:id="@+id/btn_clear_tags"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:text="@string/text_clear_tags"
            android:onClick="handleCountTabButton">
        </Button>
    </TableRow>
</LinearLayout>